@@ -83,6 +83,8 @@
 - better support for stupid margin terminals. strcmp for cons25 sucks, how can
   these be autodetected?
 - refer to windows by name etc (duplicates? fnmatch?)
+- the output code (tty.c) could do with optimisation depending on term capibilities
+- find a better way to emulate scroll region/redraw < full screen etc
 
 (hopefully) for 0.8, in no particular order:
 - swap-pane-up, swap-pane-down (maybe move-pane-*)
