@@ -1,4 +1,4 @@
-/* $Id: screen-redraw.c,v 1.29 2009-03-28 10:15:01 nicm Exp $ */
+/* $Id: screen-redraw.c,v 1.30 2009-03-31 18:39:45 nicm Exp $ */
 
 /*
  * Copyright (c) 2007 Nicholas Marriott <nicm@users.sourceforge.net>
@@ -72,6 +72,14 @@ screen_redraw_screen(struct client *c, struct screen *s)
 	/* Fill in empty space below. */
 	if (w->sy < c->tty.sy - status)
 		screen_redraw_blanky(c, w->sy, c->tty.sy - status - w->sy, '=');
+
+	/* Draw right border line. */
+	if (w->sx < c->tty.sx) {
+		for (i = 0; i < c->tty.sy; i++) {
+			tty_putcode2(&c->tty, TTYC_CUP, i, w->sx);
+			tty_putc(&c->tty, '|');
+		}
+	}
 
 	/* Draw the status line. */
 	screen_redraw_status(c);
